# serobj-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.tpl  MANIFEST.in  README.md  setup.cfg  setup.py
requirements/: requirements.dev.txt  requirements.txt
serobj/: __init__.py  attrs.py
serobj/protocol/: __init__.py  base.py  zero.py
serobj/utils/: __init__.py  path_to_object.py  serobj_calls.py
tests/: test_basic_values.py
