# Copyright 2020 Vadim Sharay <vadimsharay@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = serobj
summary = Serialize objects
description-file = README.md
maintainer = Vadim Sharay
maintainer-email = vadimsharay@gmail.com
license = Apache License, Version 2.0
license_files = LICENSE

[bdist_rpm]
doc_files = LICENSE README.md

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 99
ignore = E731,E203,E266,E501,W503,F403,F401
exclude = .git,__pycache__,.eggs,*.egg

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '\.eggs | \.git | \.hg | \.mypy_cache | \.tox | \.venv | _build | buck-out | build | dist'
